add getTeaser method functionality

--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
           <option value="words">Word Count</option>
           <option value="vowels">Number of Vowels</option>
           <option value="consonants">Number of Consonants</option>
+          <option value="teaser">Blog teaser</option>
         </select>
         <button class="btn btn-default" type="submit">Submit</button>
       </form>
       <div id="result">
-        
+
       </div>
     </div>
   </body>
